# document-uploader-aspose-total-demo

./: .clang-format  .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.test  Dockerfile.ui  INTEGRATIONS.md  LICENSE  Makefile  README.md  compose.go.yaml  compose.yaml  go.Dockerfile  go.mod  go.sum  office-converter.md  pyproject.toml  ruff.toml  test_ui.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  e2e-test-instructions.md  html-conversion-build-and-test.md  integration-test-instructions.md  python-retirement-nextjs-ui-build-and-test.md  security-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/go-orchestrator/: containerize-deploy.md  contract-freeze.md  framework-alignment.md  parity-testing.md  python-retirement-plan.md
aidlc-docs/construction/office-converter/: architecture-diagram.md
aidlc-docs/construction/plans/: go-orchestrator-migration-plan.md  html-conversion-code-generation-plan.md  html-conversion-functional-design-plan.md  office-converter-code-generation-plan.md  office-converter-functional-design-plan.md  office-converter-nfr-design-plan.md  office-converter-nfr-requirements-plan.md  python-retirement-nextjs-ui-code-generation-plan.md  python-retirement-nextjs-ui-functional-design-plan.md  s3-source-integration-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  html-conversion-execution-plan.md  python-retirement-nextjs-ui-execution-plan.md  story-generation-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: html-conversion-requirement-questions.md  html-conversion-requirements.md  local-v1-scope.md  python-retirement-nextjs-ui-questions.md  python-retirement-nextjs-ui-requirements.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/reverse-engineering/: api-documentation.md  architecture.md  business-overview.md  code-quality-assessment.md  code-structure.md  component-inventory.md  dependencies.md  reverse-engineering-timestamp.md  technology-stack.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
aidlc-docs/operations/: dev-deployment-topology.md  eks-production-topology.md  local-docker-images.md
cmd/orchestrator/: main.go  main_test.go
deploy/: README.md
deploy/helm/office-convert/: .helmignore  Chart.yaml  values-classification-fanout.yaml  values.yaml
deploy/iam/: README.md  office-convert-s3-policy.json  office-convert-s3-trust-policy.json
deploy/localstack/: init-buckets.sh
deploy/scripts/: eks-vpn-routes.sh  portforward.sh  route53-delete.sh  route53-upsert.sh  tag-resources.sh
internal/cache/: cache.go  cache_test.go
internal/config/: config.go
internal/containerstats/: containerstats.go
internal/csvinput/: csvinput.go  csvinput_test.go
internal/email/: email.go
internal/gotenberg/: gotenberg.go  gotenberg_test.go
internal/libreoffice/: libreoffice.go
internal/license/: license.go  license_test.go
internal/netpolicy/: netpolicy.go  netpolicy_test.go  pbt_test.go
internal/obs/: obs_test.go  progress.go  recent.go  ring.go
internal/oclog/: log.go
internal/oerrors/: errors.go
internal/orchestrator/: orchestrator.go
internal/planner/: pbt_test.go  planner.go  planner_test.go
internal/probe/: html_test.go  probe.go  probe_lite.go  probe_test.go
internal/qpdf/: qpdf.go  qpdf_test.go
internal/ratelimit/: ratelimit.go
internal/s3/: aws.go  s3.go
internal/server/: convert.go  convert_html.go  convert_html_test.go  embed.go  golden_test.go  health.go  server.go  server_test.go
internal/server/templates/: dashboard.html  landing.html
internal/types/: types.go
internal/worker/: pool.go  pool_test.go  worker.go
office_convert/: __init__.py  aspose_email_convert.py  aspose_worker.py  cache.py  chunk_planner.py  config.py  container_stats.py  csv_input.py  errors.py  heartbeats.py  job_progress.py  libreoffice_convert.py  license.py  logging.py  orchestrator.py  probe.py  probe_lite.py  qpdf.py  rate_limit.py  recent.py  s3_client.py  server.py  timings.py  types.py  worker_pool.py
office_convert/templates/: dashboard.html
office_convert_ui/: __init__.py  app.py
scripts/: capture_golden.py
smoke_test/: CMakeLists.txt  Dockerfile.smoke  README.md  words_smoke.cpp
testdata/corpus/: README.md  sample-js.html  sample.html  simple.pptx  single_sheet.xlsx
tests/: conftest.py
tests/corpus/: README.md  _generate.py  complex.pptx  medium.docx  multi_sheet.xlsx  sample-ssrf.html  sample.eml  small.docx
tests/e2e/: conftest.py  test_real_conversion.py
tests/integration/: test_conversions_endpoint.py  test_convert_endpoint.py  test_health_endpoint.py  test_rate_limit_endpoint.py  test_s3_convert.py
tests/property/: test_chunk_planner_pbt.py  test_format_detection_pbt.py  test_qpdf_concat_pbt.py  test_subdivision_pbt.py
tests/unit/: test_aspose_worker.py  test_cache.py  test_chunk_planner.py  test_config.py  test_libreoffice_convert.py  test_license.py  test_logging.py  test_orchestrator.py  test_probe.py  test_qpdf.py  test_rate_limit.py  test_recent.py  test_s3_client.py
ui/: .dockerignore  .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/convert/: ConvertPanel.tsx
ui/components/dashboard/: DashboardFrame.tsx
ui/components/ui/: Badge.tsx  (+3 more)
ui/e2e/: compare.spec.ts  dashboard.spec.ts  fixtures.ts  history.spec.ts  live-smoke.spec.ts  mock-api.ts
ui/lib/: api.ts  format.ts  types.ts
worker_cpp/: CMakeLists.txt  error.cpp  error.h  license.h  main.cpp  pool.cpp  pool.h  probe.h  probe_util.h  render.h  timing_util.h
worker_cpp/formats/: docx.cpp  email.cpp  pdf.cpp  pptx.cpp  xlsx.cpp
(+53 files in other folders)
