[project]
name = "office-convert"
version = "0.1.0"
description = "Chunked Office document to PDF converter using Aspose.Total C++"
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [{ name = "office-convert maintainers" }]
keywords = ["aspose", "pdf", "office", "docx", "pptx", "xlsx", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Typing :: Typed",
]
dependencies = [
    # Pinned to 0.115.* to match the production Dockerfile (which installs
    # `fastapi==0.115.*`). The wider `<0.137` range let the TEST image resolve
    # fastapi 0.136, which drags in starlette 1.x — and starlette 1.x's
    # testclient raises StarletteDeprecationWarning for httpx<2, which the
    # suite's `filterwarnings=error` turns into a hard conftest-import failure.
    # Keeping test == prod removes that drift. Bumping past 0.115 is a
    # deliberate upgrade that must also move starlette/httpx together.
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.49",
    "pydantic>=2.9,<2.14",
    "pydantic-settings>=2.6,<2.15",
    "aiofiles==24.1.*",
    "python-multipart==0.0.29",
    "boto3>=1.35,<2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-cov>=5,<8",
    "pytest-asyncio>=0.24,<1.5",
    "pytest-xdist==3.6.*",
    "hypothesis==6.*",
    "httpx>=0.27,<0.29",
    "mypy==1.13.*",
    "ruff==0.7.*",
    "python-docx==1.1.*",
    "python-pptx==1.0.*",
    "openpyxl==3.1.*",
    "reportlab>=4.4,<4.6",
    "types-aiofiles",
    "moto[s3]>=5.0,<6",
]
# End-to-end test extra: requires a Docker daemon at test time. Install with
# `uv pip install -e .[e2e]` alongside `[dev]`.
e2e = [
    "testcontainers==4.8.*",
    "httpx>=0.27,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["office_convert"]

# PEP 561: ship the py.typed marker so consumers' mypy picks up the type hints.
[tool.hatch.build.targets.wheel.force-include]
"office_convert/py.typed" = "office_convert/py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
    "e2e: end-to-end tests requiring Docker + Aspose license (opt-in via OFFICE_CONVERT_E2E_LICENSE env var)",
]

[tool.coverage.run]
source = ["office_convert"]
omit = ["office_convert/server.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["tests/corpus/_generate.py"]

[[tool.mypy.overrides]]
module = [
    "aiofiles.*",
    "reportlab.*",
    "docx.*",
    "pptx.*",
    "openpyxl.*",
    "boto3.*",
    "botocore.*",
    "moto.*",
]
ignore_missing_imports = true
